Fixed white line on small screen

--- a/Portfolio/task/src/style.css
+++ b/Portfolio/task/src/style.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 body{
     box-sizing: content-box;
     min-width: 300px;
@@ -102,7 +105,7 @@ header h1{
 #about div{
     flex-basis: 50%;
     margin-top: 5px;
-    padding: 5px 20px 15px;
+    padding: 5px 15px 15px;
     max-width: 60%;
     min-width: 300px;
     min-height: 350px;
@@ -183,7 +186,7 @@ footer{
 .window{
     display: none;
     position: fixed;
-    margin:0;
+    margin:0 !important;
     z-index: 1;
     left: 0;
     top: 0;
